app/src/screens/adventures/AdventuresScreen.css
.adventure-list-container {
  gap: 1.5rem;
  flex-wrap: wrap;
  list-style-type: none;
}

.new-adventure-btn {
  width: var(--adventure-preview-width);
  height: var(--adventure-preview-height);
}

.new-adventure-btn svg {
  height: var(--font-size-4xl);
  width: var(--font-size-4xl);
}

